Added phrase pairings, section research, hooked up Parzival for question generation, and used phrase pairings to suggest incorrect answers.

--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -5,11 +5,9 @@
 		<%= submit_tag "Search", :class => "btn primary" %>
 	<% end %>
 	</div>
-	<div>
-		<a href="/marketplace"><h1>Explore Moonlite</h1></a>
-	</div>
+	<div><a><h1>Explore Moonlite</h1></a></div>
 </section>
-<section>
+<section id="path_explore">
   <% @path_sections.each do |paths| %>
     <% path_name = paths[0] %>
     <% all_paths = paths[1] %>
@@ -18,9 +16,9 @@
     <% else %>
     <hr/>
     <div class="row" style="padding-left: 20px;">
-      <h2 style="float: left; text-transform: uppercase; font-size: 19px; font-weight: bold; color: slategray;"><%= path_name %></h2>
+      <h2><%= path_name %></h2>
       <% if @display_all %>
-        <a href="/explore?m=<%= path_name %>" style="float: right; padding-top: 10px;">View All</a>
+        <%= link_to "View All", explore_path(:m => path_name), :style=> "float: right; padding-top: 10px;" %>
       <% end %>
     </div>
     <% end %>
@@ -29,13 +27,11 @@
       <% if pp >= 12 && @display_all then break end %>
       <li>
         <a href="<%= path_path(all_paths[pp]) %>">
-          <span class="path-caption">
-            <span style="font-size: 12px; font-weight: bold; line-height: 13px;">
-              <%= truncate(all_paths[pp].name, :length => 35) %>
-            </span><br>
+          <div class="path-caption">
+            <span class="caption-title"><%= truncate(all_paths[pp].name, :length => 35) %></span><br>
             <span style="font-size: 10px; float: left;">237 Enrolled</span>
             <span style="font-size: 10px; float: right;">Rating: 97%</span>
-          </span>
+          </div>
           <img class="thumbnail" src="<%= all_paths[pp].path_pic %>" height="150" width="210">
         </a>
       </li>
