--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,3 +1,12 @@
+<script>
+$(function(){
+  $("#section_image_url").change(function(){
+    var link = $(this).val();
+    console.log(link);
+    $("#section_pic").attr("src", link);
+  });
+});
+</script>
 <h1>New Section</h1>
 <section>
 <%= form_for @section do |f| %>
@@ -9,10 +18,16 @@
 			<%= f.text_field :name, :class => "xlarge" %>
 		</div>
 	</div>
-	<div class="field clearfix">
-		<%= f.label :instructions %>
+  <div class="field clearfix">
+		<%= f.label "Picture URL" %>
 		<div class="input">
-			<%= f.text_area :instructions, :class => "markitup", :rows => "8" %>
+			<%= f.text_field :image_url, :class=>"xlarge" %>
+		</div>
+	</div>
+  <div class="field clearfix">
+    <%= f.label :default_picture %>
+		<div class="input">
+			<%= image_tag(@section.pic, :width => "210", :style=>"margin:10px 0px 20px 10px", :id => "section_pic") %>
 		</div>
 	</div>
 	<div class="actions">
