--- a/app/views/sections/research.html.erb
+++ b/app/views/sections/research.html.erb
@@ -1,5 +1,6 @@
 <script src="/javascripts/research.js"></script>
 <script>
+<% if @section.instructions.nil? %>
 $(function(){
   var topics = [<%= @quoted_topics.join(",").html_safe %>];
   var use_wikipedia = <%= @use_wikipedia %>;
@@ -7,75 +8,42 @@ $(function(){
   var use_google_images = <%= @use_google_images %>;
   var limit = 1000;
   
-  add_empty_articles(topics);
-
-  if(use_wikipedia){
-    for(var t in topics){
-      if(t >= limit){ break; }
-      topic = topics[t];
-      search_wikipedia(topic)
+  if (topics.length > 0){
+    add_empty_articles(topics);
+    if (use_wikipedia){
+      for(var t in topics){
+        if(t >= limit){ break; }
+        topic = topics[t];
+        search_wikipedia(topic)
+      }
     }
-  }
-  
-  if(use_youtube){
-    for(var t in topics){
-      if(t >= limit){ break; }
-      search_youtube(topics[t])
+    if(use_youtube){
+      for(var t in topics){
+        if(t >= limit){ break; }
+        search_youtube(topics[t])
+      }
+    } 
+    if(use_google_images){
+      search_google_images(topics)
     }
-  }
-  
-  if(use_google_images){
-    search_google_images(topics)
   }
 });
+<% else %>
+$(function(){
+  add_editing_tools();
+});
+<% end %>
 </script>
-<div id="settings_editor" class="modal hide fade">
-  <div class="modal-header">
-    <a href="#" class="close"></a>
-    <h3></h3>
-  </div>
-  <div class="modal-body">
-  <form>
-    <input type="hidden" id="last_article">
-    <div class="field clearfix">
-      <label>Youtube</label>
-      <div class="input">
-        <input type="checkbox" id="youtube_active" class="xlarge">
-      </div>
-    </div>
-    <div class="field clearfix">
-      <label>Youtube URL</label>
-      <div class="input">
-        <input type="text" id="youtube_url" class="xlarge">
-      </div>
-    </div>
-    <div class="field clearfix">
-      <label>Wikipedia</label>
-      <div class="input">
-        <input type="checkbox" id="wiki_active" class="xlarge">
-      </div>
-    </div>
-    <div class="field clearfix">
-      <label>Wikipedia URL</label>
-      <div class="input">
-        <input type="text" id="wiki_url" class="xlarge">
-      </div>
-    </div>
-  </form>
-  </div>
-  <div class="modal-footer">
-    <a onclick="$('#settings_editor').modal('hide');" class="btn secondary">Cancel</a>
-    <a onclick="$('#settings_editor').modal('hide'); update_settings();" class="btn primary">Save</a>
-  </div>
-</div>
 <script> 
-  /*var message="Sorry! To prevent cheating, the path author has chosen to disable copy and paste on this page."; function clickIE4(){ if (event.button==2){ alert(message); return false; } } function clickNS4(e){ if (document.layers||document.getElementById&&!document.all){ if (e.which==2||e.which==3){ alert(message); return false; } } } if (document.layers){ document.captureEvents(Event.MOUSEDOWN); document.onmousedown=clickNS4; } else if (document.all&&!document.getElementById){ document.onmousedown=clickIE4; } document.oncontextmenu=new Function("alert(message);return false") */ 
+  /*ondragstart="return false" onselectstart="return false" var message="Sorry! To prevent cheating, the path author has chosen to disable copy and paste on this page."; function clickIE4(){ if (event.button==2){ alert(message); return false; } } function clickNS4(e){ if (document.layers||document.getElementById&&!document.all){ if (e.which==2||e.which==3){ alert(message); return false; } } } if (document.layers){ document.captureEvents(Event.MOUSEDOWN); document.onmousedown=clickNS4; } else if (document.all&&!document.getElementById){ document.onmousedown=clickIE4; } document.oncontextmenu=new Function("alert(message);return false") */ 
 </script>
-<section id="doc_root" ondragstart="return false" onselectstart="return false">
+<%= render "research_editors" %>
+<% if @section.instructions.nil? %>
+<section id="doc_root">
   <section>
     <h1>Section <%= @section.position %>: <%= @section.name %></h1>
     <p>This section will include questions on the following topics:</p>
-    <ul>
+    <ul id="topic_list">
     <% @topics.each do |t| %>
       <li><a href="#article_<%= t.gsub(" ","_") %>"><%= t %></a></li>
     <% end %>
@@ -84,11 +52,22 @@ $(function(){
   <section id="articles">
   </section>
 </section>
+<% else %>
+<section id="doc_root">
+  <%= @section.instructions.html_safe %>
+</section>
+<% end %>
 <%= form_for @section do |f| %>
   <%= f.hidden_field :instructions %>
   <div class="actions">
 		<%= f.submit "Save", :confirm => "Warning: This will overwrite any previous material you had for this section.", :class => "btn primary" %>
-		<%= link_to "Revise Topics", "javascript:history.go(-1)", :class => "btn secondary" %>
-    <%= link_to "Cancel", edit_section_path(@section), :class => "btn secondary" %>
+		<a onclick="display_topic_editor();" class="btn secondary">Add Topic</a>
+    <%= link_to "Back", edit_section_path(@section, :m=>"instructions"), :class => "btn secondary" %>
+    <%= link_to "Clear", 
+      research_section_path(@section, :m => "clear"), 
+      :confirm => "Are you sure you want to clear the instructions for this section?", 
+      :class => "btn danger",
+      :style => "float:right;"
+    %>
 	</div>
 <% end %>
