--- a/app/views/sections/research_settings.html.erb
+++ b/app/views/sections/research_settings.html.erb
@@ -1,10 +1,11 @@
-<h1>Research Settings</h1>
+<h1>Section Topics</h1>
 <p style="padding:20px">
   Before we begin, please tell us which topics you would like researched and where you want to pull information from. 
   We have compiled a list of topics that we think are important to this section below, separated by commas. 
   Feel free to remove from or add to this list as much as you want.
 </p>
 <%= form_tag({:controller => "sections", :action => "research"}, { :method => "get" }) %>
+<%= hidden_field_tag :m, "create" %>
 <div class="field clearfix">
 	<%= label_tag :topics %>
 	<div class="input">
