--- a/app/views/user_achievements/show.html.erb
+++ b/app/views/user_achievements/show.html.erb
@@ -1,4 +1,13 @@
-<section>
-<h2><%= @achievement.name %></h2>
-<p><%= @achievement.description %></p>
-</section>
+<div style="height: 100px;">
+  <%= image_tag @achievement.pic, :size => "75x75", :style => "float:left" %>
+  <h1 style="display:inline; padding: 20px 20px 0px 20px;"><%= @achievement.name %></h2><br>
+  <h6 style="display:inline; padding: 0px 20px 0px 20px;"><%= @path.name %></h6>
+</div>
+<div style="padding: 0px 20px 20px 20px;">
+  <p><%= @achievement.description %></p>
+  <hr>
+  <div style="margin-top:15px">
+    <%= image_tag @user.profile_pic, :size => "50x50", :style => "float:left;" %>
+    <strong style="display:inline"><%= @user.name %> unlocked this achievement on <%= @date.to_date %>.</strong>
+  </div>
+</div>
