--- a/app/views/sections/questions.html.erb
+++ b/app/views/sections/questions.html.erb
@@ -37,7 +37,7 @@ $(function(){
   <section id="questions">
   </section>
   <div id="loading_status">
-    <%= image_tag "loading.GIF", :size => "64x64", :style => "margin-left: auto;margin-right: auto;padding: 25px 0 25px 0px;" %>
+    <%= image_tag "loading.gif", :size => "64x64", :style => "margin-left: auto;margin-right: auto;padding: 25px 0 25px 0px;" %>
   </div>
 </section>
 <%= form_tag({:controller => :sections, :action => :review}, :method => :post) %>
