--- a/app/views/tasks/task_form.html.erb
+++ b/app/views/tasks/task_form.html.erb
@@ -4,6 +4,9 @@ var std_url = "<%= root_url %>";
 
 $(function(){
   $(".correct_answer").each(function(){
+    var $ca = $(this).parent().parent().remove();
+    $ca.prependTo(".answers");
+  
     var $answer = $(this);
     var $suggestions = $answer.parent().parent().parent().parent().parent().find(".suggestions");
     $answer.change(function(){
@@ -25,29 +28,33 @@ $(function(){
 		</div>
 	</div>
   <div class="row">
-    <div class="span8">
+    <div class="span8 answers">
       <div class="field clearfix">
-        <%= f.label "Correct answer*" %>
+        <% a_class = (@ca == 1 ? "Correct answer" : "Wrong answer") %>
+        <%= f.label a_class + "*" %>
         <div class="input">
-          <%= f.text_field :answer1, :maxlength => 255, :size => 75, :class => "correct_answer" %>
+          <%= f.text_field :answer1, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
         </div>
       </div>
       <div class="field clearfix">
-        <%= f.label "Wrong answer*" %>
+        <% a_class = (@ca == 2 ? "Correct answer" : "Wrong answer") %>
+        <%= f.label a_class + "*" %>
         <div class="input">
-          <%= f.text_field :answer2, :maxlength => 255, :size => 75, :class => "wrong_answer" %>
+          <%= f.text_field :answer2, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
         </div>
       </div>
       <div class="field clearfix">
-        <%= f.label "Wrong answer" %>
+        <% a_class = (@ca == 3 ? "Correct answer" : "Wrong answer") %>
+        <%= f.label a_class %>
         <div class="input">
-          <%= f.text_field :answer3, :maxlength => 255, :size => 75, :class => "wrong_answer" %>
+          <%= f.text_field :answer3, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
         </div>
       </div>
         <div class="field clearfix">
-        <%= f.label "Wrong answer" %>
+        <% a_class = (@ca == 4 ? "Correct answer" : "Wrong answer") %>
+        <%= f.label a_class %>
         <div class="input">
-          <%= f.text_field :answer4, :maxlength => 255, :size => 75, :class => "wrong_answer" %>
+          <%= f.text_field :answer4, :maxlength => 255, :size => 75, :class => a_class.downcase.gsub(" ","_") %>
         </div>
       </div>
       <span style="font-style: italic; padding-left: 70px; padding-top: 6px">*Required</span>
